--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.8.1",
+    "bootstrap": "^4.2.1",
+    "express": "^4.16.4",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-icons": "^3.3.0",
     "react-scripts": "2.1.3"
   },
   "scripts": {
@@ -15,6 +19,9 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "resolutions": {
+    "ajv": "6.8.1"
   },
   "browserslist": [
     ">0.2%",
